<resources>
    <string name="app_name">SmartTRAVEL - Login Page</string>
    <string name="login_page_username_hint">Username</string>
    <string name="login_page_password_hint">Password</string>
    <string name="login_page_username_label">Username</string>
    <string name="login_page_password_label">Password</string>
    <string name="login_page_button_text">Login</string>
    <string name="login_page_button_new_user">Not a member? Register here!</string>

    <string name="activity_main_transport_label">Transport</string>
    <string name="activity_main_landmark_label">Landmark</string>
    <string name="activity_main_food_label">Food</string>
    <string name="activity_main_hotel_label">Hotel</string>

    <string name="login_page_failed_toast">Login Failed.</string>


    <string name="activity_home_location_missing_toast">Unable to get your location. Please expose GPS to outside.</string>
</resources>
